--- a/Proiect_AppUI/Properties/Resources.resx
+++ b/Proiect_AppUI/Properties/Resources.resx
@@ -250,6 +250,12 @@
   <data name="start_game" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\start_game.wav;System.IO.MemoryStream, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
+  <data name="text_exit" xml:space="preserve">
+    <value>Esti sigur ca doresti sa parasesti jocul?</value>
+  </data>
+  <data name="text_joc_nou" xml:space="preserve">
+    <value>Esti sigur ca doresti sa incepi un alt joc?</value>
+  </data>
   <data name="three" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\three.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
@@ -271,8 +277,14 @@
   <data name="tileGrass_roadNorth" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\tileGrass_roadNorth.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="titlu_exit" xml:space="preserve">
+    <value>Paraseste jocul</value>
+  </data>
   <data name="titlu_felicitari" xml:space="preserve">
     <value>Felicitari</value>
+  </data>
+  <data name="titlu_joc_nou" xml:space="preserve">
+    <value>Incepe joc nou</value>
   </data>
   <data name="two" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\two.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
